--- a/index.html
+++ b/index.html
@@ -7,32 +7,64 @@
     <title>About Me</title>
     <style>
         * {
-            font-family:Arial, Helvetica, sans-serif;
+            font-family: Arial, Helvetica, sans-serif;
+            margin: 0;
         }
 
-        #icons > a {
-            padding: 0 0.5em;
+        #center-box {
+            max-width: 768px;
+            height: 100vh;
+            margin: 2em auto;
+            padding: 0 1rem;
+        }
+
+        h1, h2 {
+            border-bottom: lightgray solid 1px;
+            margin-bottom: 1rem;
+        }
+
+        #link-icons > a {
+            margin-right: 1em;
+        }
+
+        #link-icons {
+            margin-bottom: 0.5rem;
+        }
+
+        #under-construction {
+            padding: .25rem;
+            background-image: linear-gradient(black, darkslategray);
+            color: #ddd;
+            text-align: center;
+            font-size: small;
+        }
+
+        #resume {
+            width: 100%;
+            height: 800px;
         }
 
     </style>
 </head>
 
 <body>
-    <div style="
-            display: flex; 
-            flex-direction: column;
-            align-items: center;
-            justify-content: center; 
-            height: 100vh;">
-        <h1>Check Out My Links</h1>
-        <div id="icons" style="
-        display: flex;
-        align-items: center;">
-            <a href="https://github.com/KaviV23/"><img style="width: 36px;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/GitHub_Invertocat_Logo.svg/1200px-GitHub_Invertocat_Logo.svg.png"></a>
-            <a href="https://www.linkedin.com/in/023kavi/"><img style="width: 36px;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/81/LinkedIn_icon.svg/2048px-LinkedIn_icon.svg.png"></a>
-            <a href="mailto:023kavi@gmail.com"><img style="width: 36px;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/2560px-Gmail_icon_%282020%29.svg.png"></a>
+    <div id="under-construction">Temporary site</div>
+    <div id="center-box">
+        <h1>Kaviraj Vijayanthiran</h1>
+        <h2>Links</h2>
+        <div id="link-icons" style="
+            display: flex;
+            align-items: center;">
+            <a href="https://github.com/KaviV23/"><img style="width: 36px;"
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/GitHub_Invertocat_Logo.svg/1200px-GitHub_Invertocat_Logo.svg.png"></a>
+            <a href="https://www.linkedin.com/in/023kavi/"><img style="width: 36px;"
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/81/LinkedIn_icon.svg/2048px-LinkedIn_icon.svg.png"></a>
+            <a href="mailto:023kavi@gmail.com"><img style="width: 36px;"
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/2560px-Gmail_icon_%282020%29.svg.png"></a>
         </div>
-        <p>Site currently under development</p>
+        <span class="divider"></span>
+        <h2>My Resume</h2>
+        <embed id="resume" src="./public/resume-2025-v1.pdf" type="">
     </div>
 </body>
 </html>
