Add resume version text & favicons

--- a/index.html
+++ b/index.html
@@ -44,7 +44,15 @@
             height: 800px;
         }
 
+        p {
+            margin-bottom: 0.5rem
+        }
+
     </style>
+    <link rel="apple-touch-icon" sizes="180x180" href="./public/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./public/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./public/favicons/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">     
 </head>
 
 <body>
@@ -64,6 +72,7 @@
         </div>
         <span class="divider"></span>
         <h2>My Resume</h2>
+        <p>As of March 2025:</p>
         <embed id="resume" src="./public/resume-2025-v1.pdf" type="">
     </div>
 </body>
