--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
         <h2>My Resume</h2>
         <p>
             <span>
-                As of March 2025
+                As of May 2025
             </span>
             <span>
-                <a href="./public/resume-2025-v1.pdf">Download PDF</a>
+                <a href="./public/resume-2025-v2.pdf" target="_blank">Download PDF</a>
             </span>
         </p>
-        <embed id="resume" src="./public/resume-2025-v1.pdf">
+        <embed id="resume" src="./public/resume-2025-v2.pdf">
         <div id="resume-error" hidden="true"><i>Can't display resume. Please download it to view</i></div>
         <script>
             if (
